<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lytTipMargins"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lytStartingTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lytSubtotalLabel"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/lblSubtotal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/lblSubtotal"
                    android:text="@string/subtotal"
                    android:textSize="20sp"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/lblDollarSign"
                    android:layout_width="47dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/dollarsign"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtSubtotal"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/enter_your_subtotal_here"
                android:ems="10"
                android:importantForAccessibility="no"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@string/default_txtSubtotal"
                android:textSize="20sp"
                tools:ignore="EditableContentDescCheck,LabelFor" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:id="@+id/lytTipTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPercent15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/_15_percent"
                android:text="@string/_15"
                android:textSize="16sp"
                tools:ignore="ButtonStyle,KeyboardInaccessibleWidget" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <Button
                android:id="@+id/btnPercent20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/_20_percent"
                android:focusable="true"
                android:text="@string/_20"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <Button
                android:id="@+id/btnPercentCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/select_your_own_percentage"
                android:focusable="true"
                android:text="@string/other"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:id="@+id/lytCustomTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <EditText
                android:id="@+id/txtCustomPercent"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/box_for_entering_your_own_percentage"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@string/default_txtCustomInput"
                android:textAlignment="textEnd"
                android:textSize="25sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="@string/percent"
                android:textSize="34sp" />

            <Space
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/confirm"
                android:textSize="16sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:id="@+id/lytTotal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/lblTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="@string/total"
                android:textSize="30sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/lblDollarSign2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="@string/dollarsign"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lblTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/default_txtSubtotal"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>